# MLIP-Workflows

./: .gitignore  README.md  config.yml  e  mlip_base.yml  pyproject.toml
assets/models/: MODELS.md
assets/structures/: STRUCTURES.md  diamond_nv.poscar  diamond_primitive.poscar  diamond_super.poscar  hbn_c2.poscar  hbn_primitive.poscar  hbn_super.poscar
env/: ENVIRONMENTS.md  HPC_install.md  mace_env.yml  matgl_env.yml  mattersim_env.yml
main/: config.yml  main.bs  main.py
notebook/: exploratory_notebook.ipynb  exploratory_script.py
resultsPhonCoupling/: phonon_coupling_report_4.txt
scripts/: checking.py  get_calc.py  phonons.py  plot.py  relax.py  struct_build.py
src/NEB/: NEB_compare_all.py  NEB_prepare_vasp_singlepoints.py  README.md  checking_neb.py  main_neb.bs  run_neb_raw_OLD.py  run_neb_raw_v2.py
src/NEB/neb_tools/: neb_analysis.py  neb_classes.py  neb_parsers.py  run_vasp_singlepoints.sh
src/coupling_modes/: PHONONCOUPLING.md  README.md  phonon_coupling.py
src/coupling_modes/coup_tools/: phon_analysis.py  phon_classes.py  phon_parsers.py  phon_plot.py
src/fine_tuning/: README.md  checking.py  file_conversion.bs  file_conversion_script.py  model_dtype_conversion.py  train_ivac0_neb.sh
src/fine_tuning/neb_data_set_synth/: README.md   outcar_extxyz.py  siv_data.py  siv_rules.yml  siv_shelf.py
src/mlip_phonons/: README.md  config_classes.py  get_calc.py  main.py  phonons.py  plot.py  relax.py
src/mlip_phonons/tools/: free_gpu.py
test/temporary_files/help_docstr/: help_chgnetcalculator.txt  help_get_chgnet_load.txt  help_get_upet.txt  (+3 more)
(+26 files in other folders)
